MSE: Don't throw exception on SourceBuffer::appendError()

appendError()'s last step is to run the end of stream algorithm,
according to spec. However, the code was structured such that it would
call the full MediaSource.endOfStream() method. That method has some
extra checks which can sometimes fail (and cause exception) in this
appendError() path. This change refactors to to expose publicly a
MediaSource method EndOfStreamAlgorithm, which
SourceBuffer::AppendError() now uses.

BUG=624185

Change-Id: Ic8d2a59906b6403d74a8a9c65a3a428258f9b4e3
Reviewed-on: https://chromium-review.googlesource.com/552824
Commit-Queue: Matthew Wolenetz <wolenetz@chromium.org>
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483210}
Former-commit-id: 17f65f892acfa4948c130f988747d6f7811372db