third_party/WebKit/Source/modules/mediasource/MediaSource.cpp
@@ -605,20 +605,26 @@ void MediaSource::endOfStream(const AtomicString& error,
   DEFINE_STATIC_LOCAL(const AtomicString, network, ("network"));
   DEFINE_STATIC_LOCAL(const AtomicString, decode, ("decode"));
 
-  if (error == network) {
-    EndOfStreamInternal(WebMediaSource::kEndOfStreamStatusNetworkError,
-                        exception_state);
-  } else if (error == decode) {
-    EndOfStreamInternal(WebMediaSource::kEndOfStreamStatusDecodeError,
-                        exception_state);
-  } else {
-    NOTREACHED();  // IDL enforcement should prevent this case.
-  }
+  // https://www.w3.org/TR/media-source/#dom-mediasource-endofstream
+  // 1. If the readyState attribute is not in the "open" state then throw an
+  //    InvalidStateError exception and abort these steps.
+  // 2. If the updating attribute equals true on any SourceBuffer in
+  //    sourceBuffers, then throw an InvalidStateError exception and abort these
+  //    steps.
+  if (ThrowExceptionIfClosedOrUpdating(IsOpen(), IsUpdating(), exception_state))
+    return;
+
+  // 3. Run the end of stream algorithm with the error parameter set to error.
+  if (error == network)
+    EndOfStreamAlgorithm(WebMediaSource::kEndOfStreamStatusNetworkError);
+  else if (error == decode)
+    EndOfStreamAlgorithm(WebMediaSource::kEndOfStreamStatusDecodeError);
+  else  // "" is allowed internally but not by IDL bindings.
+    EndOfStreamAlgorithm(WebMediaSource::kEndOfStreamStatusNoError);
 }
 
 void MediaSource::endOfStream(ExceptionState& exception_state) {
-  EndOfStreamInternal(WebMediaSource::kEndOfStreamStatusNoError,
-                      exception_state);
+  endOfStream("", exception_state);
 }
 
 void MediaSource::setLiveSeekableRange(double start,
@@ -670,29 +676,6 @@ void MediaSource::clearLiveSeekableRange(ExceptionState& exception_state) {
     live_seekable_range_ = TimeRanges::Create();
 }
 
-void MediaSource::EndOfStreamInternal(
-    const WebMediaSource::EndOfStreamStatus eos_status,
-    ExceptionState& exception_state) {
-  // 2.2
-  // http://www.w3.org/TR/media-source/#widl-MediaSource-endOfStream-void-EndOfStreamError-error
-  // 1. If the readyState attribute is not in the "open" state then throw an
-  //    InvalidStateError exception and abort these steps.
-  // 2. If the updating attribute equals true on any SourceBuffer in
-  //    sourceBuffers, then throw an InvalidStateError exception and abort these
-  //    steps.
-  if (ThrowExceptionIfClosedOrUpdating(IsOpen(), IsUpdating(), exception_state))
-    return;
-
-  // 3. Run the end of stream algorithm with the error parameter set to error.
-  //   1. Change the readyState attribute value to "ended".
-  //   2. Queue a task to fire a simple event named sourceended at the
-  //      MediaSource.
-  SetReadyState(EndedKeyword());
-
-  //   3. Do various steps based on |eosStatus|.
-  web_media_source_->MarkEndOfStream(eos_status);
-}
-
 bool MediaSource::IsOpen() const {
   return readyState() == OpenKeyword();
 }
@@ -729,6 +712,18 @@ void MediaSource::SetSourceBufferActive(SourceBuffer* source_buffer,
 
 HTMLMediaElement* MediaSource::MediaElement() const {
   return attached_element_.Get();
+}
+
+void MediaSource::EndOfStreamAlgorithm(
+    const WebMediaSource::EndOfStreamStatus eos_status) {
+  // https://www.w3.org/TR/media-source/#end-of-stream-algorithm
+  // 1. Change the readyState attribute value to "ended".
+  // 2. Queue a task to fire a simple event named sourceended at the
+  //    MediaSource.
+  SetReadyState(EndedKeyword());
+
+  // 3. Do various steps based on |eos_status|.
+  web_media_source_->MarkEndOfStream(eos_status);
 }
 
 bool MediaSource::IsClosed() const {
